# spark-memory

./: .gitignore  CLAUDE.md  MIGRATION_REDIS_SETUP.md  QUICKSTART.md  README.md  install.sh  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: 1호가 좋아하는 명령어 체계.md  DEVELOPMENT.md  LRMM-implementation-plan.md  REDIS_SETUP.md  REDIS_STACK_CONFIGURATION.md  checklist-revision-summary.md  detailed_work_checklist.md  dotfiles_modular_migration_plan.md  mcp-2025-quick-ref.md  mcp-latest-changes-2025.md  one-hows-day-test-scenarios.md  phase1-2-reference.md  phase1-checklist-revised.md  phase2-checklist-revised.md  phase3-checklist-mcp2025.md  phase3-checklist-revised.md  phase4-checklist-revised.md  phase5-checklist-revised.md  predefined_test_cases.md  security-implementation.md  uvx-deployment.md
docs/개정 전 체크리스트/: phase1-checklist.md  phase2-checklist.md  phase3-checklist.md  phase4-checklist.md  phase5-checklist.md
setup/: redis-setup.sh
src/memory/: cross_memory_bridge.py  engine.py  help_guide.py  memory_analytics.py
src/memory/actions/: intelligent_search.py
src/rag/: cache_manager.py  document_analyzer.py  redis_schema.py  relationships.py  structured_chunking.py  transaction_manager.py
tests/: __init__.py  test_config.py  test_models.py  test_utils.py
